fixed overflowing page content during mobile view

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -10,6 +10,10 @@
     }
   }
 
+  .pageContent {
+    overflow-x: hidden;
+  }
+
   .skip {
     isolation: isolate;
     color: var(--background);
